[package]
name = "cs-199-final-project"
version = "0.0.1"
authors = ["Saad Ahmad and Daniel Murphy"]
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
argon2 = "0.5.2"
chrono = "0.4.31"
rand = "0.8.5"
once_cell = "1.8.0"

[[bin]]
name = "server"
path = "./src/server/server.rs"

[[bin]]
name = "client"
path = "./src/client/client.rs"
